--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 <h2>Your Gallery</h2>
@@ -18,9 +14,4 @@
     </div>
     {% endfor %}
 </div>
-{% endblock %}</title>
-</head>
-<body>
-
-</body>
-</html>
+{% endblock %}
